--- a/src/view/public/index.html
+++ b/src/view/public/index.html
@@ -13,7 +13,7 @@
 
     <meta
       name="description"
-      content="Anima Beyond Foundry Importer"
+      content="Anima Beyond Foundry Formatter"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Anima Beyond Foundry Importer</title>
+    <title>Anima Beyond Foundry Formatter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
